<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="aladdin_okhttp_logging">Logging</string>
    <string name="aladdin_okhttp_proxy">Proxy</string>
    <string name="aladdin_okhttp_proxy_host">Proxy Host</string>
    <string name="aladdin_okhttp_proxy_host_placeholder">0.0.0.0:8888</string>
    <string name="aladdin_genie_okhttp_request">Request</string>
    <string name="aladdin_genie_okhttp_headers">HEADERS</string>
    <string name="aladdin_genie_okhttp_body">BODY</string>
    <string name="aladdin_genie_okhttp_response">Response</string>
    <string name="aladdin_genie_okhttp_start_time_prefix">start:&#160;</string>
    <string name="aladdin_genie_okhttp_duration_suffix">&#160;ms</string>
</resources>