<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/aladdin_genie_okhttp_log_detail_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="24dp"
            android:paddingStart="4dp"
            android:paddingTop="1dp"
            android:paddingEnd="4dp"
            android:paddingBottom="1dp"
            android:textColor="@color/aladdin_white"
            android:textSize="@dimen/aladdin_textCaption"
            tools:background="#ff21B818"
            tools:ignore="SpUsage"
            tools:text="200" />

        <TextView
            android:id="@+id/aladdin_genie_okhttp_log_detail_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:background="@drawable/aladdin_genie_okhttp_log_item_method_background"
            android:gravity="center"
            android:lines="1"
            android:minWidth="24dp"
            android:minHeight="12dp"
            android:paddingStart="4dp"
            android:paddingTop="1dp"
            android:paddingEnd="4dp"
            android:paddingBottom="1dp"
            android:textAllCaps="true"
            android:textColor="@color/aladdin_white"
            android:textSize="@dimen/aladdin_textCaption"
            tools:ignore="SpUsage"
            tools:text="get" />

        <TextView
            android:id="@+id/aladdin_genie_okhttp_log_detail_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:lines="1"
            android:textColor="@color/aladdin_textBody"
            android:textSize="@dimen/aladdin_textBody"
            tools:text="start: 11:59:23.009" />

        <TextView
            android:id="@+id/aladdin_genie_okhttp_log_detail_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:lines="1"
            android:textColor="@color/aladdin_textBody"
            android:textSize="@dimen/aladdin_textBody"
            tools:text="800ms" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aladdin_genie_okhttp_log_detail_request_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/aladdin_genie_okhttp_request"
                android:textColor="@color/aladdin_textSubhead"
                android:textSize="@dimen/aladdin_textSubhead" />

            <TextView
                android:id="@+id/aladdin_genie_okhttp_log_detail_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:fontFamily="monospace"
                android:maxLines="2"
                android:minHeight="12dp"
                android:textColor="@color/aladdin_textCaption"
                android:textSize="@dimen/aladdin_textBody"
                tools:ignore="SpUsage"
                tools:text="https://httpbin.org/\nget" />

            <TextView
                android:id="@+id/aladdin_genie_okhttp_log_detail_request_headers_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/aladdin_genie_okhttp_headers"
                android:textColor="@color/aladdin_textSubhead"
                android:textSize="@dimen/aladdin_textBody" />

            <TextView
                android:id="@+id/aladdin_genie_okhttp_log_detail_request_headers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:fontFamily="monospace"
                android:minHeight="12dp"
                android:textColor="@color/aladdin_textBody"
                android:textSize="@dimen/aladdin_textBody"
                tools:ignore="SpUsage"
                tools:text="ContentType=application/json" />

            <TextView
                android:id="@+id/aladdin_genie_okhttp_log_detail_request_body_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/aladdin_genie_okhttp_body"
                android:textColor="@color/aladdin_textSubhead"
                android:textSize="@dimen/aladdin_textBody" />

            <TextView
                android:id="@+id/aladdin_genie_okhttp_log_detail_request_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:fontFamily="monospace"
                android:minHeight="12dp"
                android:textColor="@color/aladdin_textBody"
                android:textSize="@dimen/aladdin_textBody"
                tools:ignore="SpUsage"
                tools:text="[NO BODY]" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/aladdin_divider" />

            <TextView
                android:id="@+id/aladdin_genie_okhttp_log_detail_response_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/aladdin_genie_okhttp_response"
                android:textColor="@color/aladdin_textSubhead"
                android:textSize="@dimen/aladdin_textSubhead" />

            <TextView
                android:id="@+id/aladdin_genie_okhttp_log_detail_response_headers_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/aladdin_genie_okhttp_headers"
                android:textColor="@color/aladdin_textSubhead"
                android:textSize="@dimen/aladdin_textBody" />

            <TextView
                android:id="@+id/aladdin_genie_okhttp_log_detail_response_headers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:fontFamily="monospace"
                android:minHeight="12dp"
                android:textColor="@color/aladdin_textBody"
                android:textSize="@dimen/aladdin_textBody"
                tools:ignore="SpUsage"
                tools:text="ContentType=application/json" />

            <TextView
                android:id="@+id/aladdin_genie_okhttp_log_detail_response_body_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/aladdin_genie_okhttp_body"
                android:textColor="@color/aladdin_textSubhead"
                android:textSize="@dimen/aladdin_textBody" />

            <TextView
                android:id="@+id/aladdin_genie_okhttp_log_detail_response_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:fontFamily="monospace"
                android:minHeight="12dp"
                android:textColor="@color/aladdin_textBody"
                android:textSize="@dimen/aladdin_textBody"
                tools:ignore="SpUsage"
                tools:text="[NO BODY]" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>